# qfm-treds-mvp

./: .gitignore  Makefile  README.md  main.py  mkdocs.yml  prd_hybrid_quantum_treds.md  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  test_app.py
.streamlit/: config.toml
app/: __init__.py  app.py
app/pages/: __init__.py  dashboard.py  decision_log.py  invoice_detail.py  invoice_queue.py  ring_investigation.py
app/utils/: __init__.py  data_loader.py  styles.py
config/: __init__.py  config.py  constants.py
data/outputs/: .gitkeep  detected_rings.json  risk_report.json  sample_predictions.json
docs/: IMPLEMENTATION_GUIDE.md  index.md
docs/phase_docs/: phase1_setup.md
models/: .gitkeep
notebooks/: .gitkeep
reports/: .gitkeep
src/: __init__.py
src/classical/: __init__.py  default_predictor.py  model_trainer.py
src/data_generation/: __init__.py  data_validator.py  entity_generator.py  invoice_generator.py
src/explainability/: __init__.py  shap_explainer.py
src/feature_engineering/: __init__.py  entity_features.py  feature_engineer.py  graph_builder.py  invoice_features.py
src/pipeline/: __init__.py  hybrid_pipeline.py  risk_scorer.py
src/quantum/: __init__.py  qubo_formulator.py  ring_detector.py
src/utils/: __init__.py  helpers.py  logger.py
tests/: __init__.py  run_all_tests.py  test_classical.py  test_data_generation.py  test_explainability.py  test_feature_engineering.py  test_phase1_setup.py  test_pipeline.py  test_quantum.py
